--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   <body>
     <div class="container">
       <h1>CSCI 344 Homepage</h1>
+      <a href="https://github.com/TerminalCalamitas/csci344-coursework"
+        >Link to Base Repo</a
+      >
       <input
         id="search"
         type="text"
@@ -44,7 +47,17 @@
         <h3>Completed Homework</h3>
         <div class="links">
           <div class="link-item">
-            <a href="tutorials/tutorial01/index.html">Homework 1</a>
+            <!--<a href="tutorials/tutorial01/index.html">Homework 1</a>-->
+          </div>
+          <!--<div class="link-item"><a href="">Homework2</a></div>-->
+        </div>
+      </div>
+      <div class="section">
+        <h3>Completed Tutorials</h3>
+        <div class="links">
+          <div class="link-item">
+            <a href="tutorials/tutorial01/index.html">Tutorial 1</a>
+            <a href="tutorials/tutorial02/index.html">Tutorial 2</a>
           </div>
           <!--<div class="link-item"><a href="">Homework2</a></div>-->
         </div>
