Fixed Tutorial 2 Entry

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <div class="links">
           <div class="link-item">
             <a href="tutorials/tutorial01/index.html">Tutorial 1</a>
+          </div>
+          <div class="link-item">
             <a href="tutorials/tutorial02/index.html">Tutorial 2</a>
           </div>
           <!--<div class="link-item"><a href="">Homework2</a></div>-->
