--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <div class="link-item">
             <a href="tutorials/tutorial02/index.html">Tutorial 2</a>
           </div>
+          <div class="link-item">
+            <a href="tutorials/tutorial03/index.html">Tutorial 3</a>
+          </div>
           <!--<div class="link-item"><a href="">Homework2</a></div>-->
         </div>
       </div>
