Finished Tutorial 4 and Homework 2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container">
       <h1>CSCI 344 Homepage</h1>
-      <a href="https://github.com/TerminalCalamitas/csci344-coursework"
+      <a href="https://github.com/TerminalCalamitas/csci344-coursework" class="base-repo"
         >Link to Base Repo</a
       >
       <input
@@ -46,10 +46,13 @@
       <div class="section">
         <h3>Completed Homework</h3>
         <div class="links">
+          <!--<div class="link-item">
+            <a href="tutorials/tutorial01/index.html">Homework 1</a>
+          </div>-->
           <div class="link-item">
-            <!--<a href="tutorials/tutorial01/index.html">Homework 1</a>-->
+            <a href="./homework/hw02/index.html">Homework 2</a>
+            <p>I worked on this with Kati of getting sick for a week fame.</p>
           </div>
-          <!--<div class="link-item"><a href="">Homework2</a></div>-->
         </div>
       </div>
       <div class="section">
