--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
           <div class="link-item">
             <a href="tutorials/tutorial03/index.html">Tutorial 3</a>
           </div>
-          <!--<div class="link-item"><a href="">Homework2</a></div>-->
+          <div class="link-item">
+            <a href="tutorials/tutorial04/index.html">Tutorial 4</a>
+          </div>
         </div>
       </div>
     </div>
