--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         placeholder="Search links..."
         oninput="filterLinks()"
       />
+
       <div class="section">
         <h3>Completed Homework</h3>
         <div class="links">
@@ -55,6 +56,7 @@
           </div>
         </div>
       </div>
+
       <div class="section">
         <h3>Completed Tutorials</h3>
         <div class="links">
@@ -72,6 +74,16 @@
           </div>
         </div>
       </div>
+
+      <div class="section">
+        <h3>Quizes</h3>
+        <div class="links">
+          <div class="link-item">
+            <a href="./quizes/quiz01/index.html">Quiz 1</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
