Added a page for my ramblings

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCI-344 Homepage</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image" href="./favicon.png">
     <script>
       function filterLinks() {
         const searchTerm = document
@@ -80,6 +81,15 @@
         <div class="links">
           <div class="link-item">
             <a href="./quizes/quiz01/index.html">Quiz 1</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="section">
+        <h3>Fun</h3>
+        <div class="links">
+          <div class="link-item">
+            <a href="./fun/calebs-commentaries.html">Topic discussions</a>
           </div>
         </div>
       </div>
