Added another little paragraph to my yap page

--- a/fun/calebs-commentaries.html
+++ b/fun/calebs-commentaries.html
@@ -18,6 +18,7 @@
         <li><b><a href="../index.html">Back Home</a></b></li>
         <li><a href="#topic1">How do LLM's work?</a></li>
         <li><a href="#topic2">Applications for AI in Education</a></li>
+        <li><a href="#topic3">How does AI copyright work?</a></li>
       </ul>
     </section>
 
@@ -58,6 +59,20 @@ negatively in a student’s education, universities should adapt their teaching 
 relationship between students and AI.</b>
       </p>
     </section>
+
+    <section class="topic" id="topic3">
+      <h2><b>How does AI copyright work?</b></h2>
+      <p>
+        I would like to start by saying that a lot of what I say is based on the great video by <a href="https://youtu.be/pt7GtDMTd3k?si=z-0_zcZToSmogztM">DougDoug</a> so I encourage you to watch his video as I think it goes into much better detail.<br>
+        <br>AI is in a weird legal situation because it's so new that there have not been many cases around it so there isn't a lot of legal precedent. One place where this is very important is copyright law. Typically whenever someone creates something, whether a piece of writing, a video, song, or any other form of creative work <b>they own the copyright of their creation.</b>
+        While this is a bit of a simplification, having copyright oversomething means that you own the thing created and you can decide how it is used by others.
+        <br>When talking about AI generated content, things get a bit more confusing. There are 3 potential entities who would own the copyright to the created content, the AI company, the AI model itself, or the end user. Companies like OpenAI and Deepseek state in their Terms of Service that the user gets the rights to anything created from the user's input. This sounds like the user simply owns the copyright of the content, but there are some things that make things a bit more complicated.
+        <br>To determine if the user can have the copyright we have to determine that OpenAI and Deepseek actually have the rights to the content created by the AI in order for them to give it away. In the case of <i>Naruto v. David Slater et al</i> it was determined that even though David Slater set everything up for a monkey to take a picture of itself, because the monkey took the picture, the monkey owned the copyright rather than David Slater. This means that even though you set everything up for the AI to create something, you do not own the copyright, the AI does. In the same case it was determined that since the owner of the copyright was a monkey and not human, it actually couldn't own the copyright. This means that the copyright of the image is in a weird place where <b>no one actually owns the copyright of the image</b>.
+        <br>This is a very important case when it comes to AI because it means that since the AI did the work to create the content the model owns the rights to the content, however, since the model isn't a human, it can't own the copyright. This means that even though AI companies are giving you "the rights" to the produced content, they aren't giving you anything since those rights <b>don't actually exist.</b>
+        <br>While it's not really a problem in most scenarios, if you use AI in the writing of code for your job, that code is in a weird legal place where you don't own the code so other people can take the code and use it without any repercussions since it isn't copywritten.
+      </p>
+    </section>
+
   </body>
 </html>
 
