--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
           <div class="link-item">
             <a href="tutorials/tutorial04/index.html">Tutorial 4</a>
           </div>
+          <div class="link-item">
+            <a href="tutorials/tutorial05/index.html">Tutorial 5</a>
+          </div>
         </div>
       </div>
 
