--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           <div class="link-item">
             <a href="./fun/calebs-commentaries.html">Topic discussions</a>
           </div>
+          <div class="link-item">
+            <a href="https://justbean.co/">Bean</a>
+          </div>
         </div>
       </div>
 
