Added Adam Parkzer's review to the bean link

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           </div>
           <div class="link-item">
             <a href="https://justbean.co/">Bean</a>
+            <p>Declared interesting by Adam Parkzer</p>
           </div>
         </div>
       </div>
