Fixed egregious typo

--- a/fun/calebs-commentaries.html
+++ b/fun/calebs-commentaries.html
@@ -26,7 +26,7 @@
       <h2><b>How do LLM's work?</b></h2>
       <p>
         LLM's are very complicated math models that use given data to make predictions about what is most likely to come next, <b>they are not intelligent and cannot understand or make decisions</b>.
-        <br>Currently companies have found that by giveing more data to the LLMs during the training process, the LLMs are able to make more accurate predictions since they have more information about how people usually talk.
+        <br>Currently companies have found that by giving more data to the LLMs during the training process, the LLMs are able to make more accurate predictions since they have more information about how people usually talk.
         When the LLM is given an input prompt, it turns that prompt into a series of numbers called tokens that represent the text. 
         The LLM then uses a series of matrix multiplications operations on the input tokens to determine the token that is most likely to come next. 
         Unlike what is commonly believed, none of the LLMs are able to understand the input or the data it was trained on. 
