--- a/index.html
+++ b/index.html
@@ -62,19 +62,22 @@
         <h3>Completed Tutorials</h3>
         <div class="links">
           <div class="link-item">
-            <a href="tutorials/tutorial01/index.html">Tutorial 1</a>
+            <a href="./tutorials/tutorial01/index.html">Tutorial 1</a>
           </div>
           <div class="link-item">
-            <a href="tutorials/tutorial02/index.html">Tutorial 2</a>
+            <a href="./tutorials/tutorial02/index.html">Tutorial 2</a>
           </div>
           <div class="link-item">
-            <a href="tutorials/tutorial03/index.html">Tutorial 3</a>
+            <a href="./tutorials/tutorial03/index.html">Tutorial 3</a>
           </div>
           <div class="link-item">
-            <a href="tutorials/tutorial04/index.html">Tutorial 4</a>
+            <a href="./tutorials/tutorial04/index.html">Tutorial 4</a>
           </div>
           <div class="link-item">
-            <a href="tutorials/tutorial05/index.html">Tutorial 5</a>
+            <a href="./tutorials/tutorial05/index.html">Tutorial 5</a>
+          </div>
+          <div class="link-item">
+            <a href="./tutorials/tutorial06/index.html">Tutorial 5</a>
           </div>
         </div>
       </div>
