--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
           <div class="link-item">
             <a href="./quizes/quiz01/index.html">Quiz 1</a>
           </div>
+          <div class="link-item">
+            <a href="./quizes/quiz02a/index.html">Quiz 2</a>
+          </div>
         </div>
       </div>
 
