Added link to Homework 3

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <a href="./homework/hw02/index.html">Homework 2</a>
             <p>I worked on this with Kati of getting sick for a week fame.</p>
           </div>
+
+          <div class="link-item">
+            <a href="./homework/hw03/index.html">Homework 3</a>
+            <p>I worked on this with Kati.</p>
+          </div>
         </div>
       </div>
 
