Reorganized and commented most of the written code

--- a/homework/hw03/index.html
+++ b/homework/hw03/index.html
@@ -10,16 +10,12 @@
 
 <body class="bg-gray-100">
     <div id="nav">
-        <!-- to be populated by code -->
+        <!-- Will be populated with nav when page is loaded -->
     </div>
 
     <aside class="fixed top-[100px] left-[63vw] w-70 hidden md:block">
         <header class="flex gap-4 items-center">
-          <!--
-            This should be insterted dynamically
-            <img src="https://picsum.photos/60/60?q=11" class="rounded-full w-16" />
-            <h2 class="font-Comfortaa font-bold text-2xl">gibsonjack</h2>
-          -->
+          <!-- Will be populated with User Info when page is loaded -->
         </header>
         <div class="mt-4">
             <p class="text-base text-gray-400 font-bold mb-4">Suggestions for you</p>
@@ -27,10 +23,10 @@
     </aside>
 
     <main class="mt-[100px] md:max-w-[61vw] md:mr-[50px] px-6 md:pl-[5vw] lg:pl-[10vw]">
-        <!-- Stories -->
         <header class="flex gap-6 bg-white border p-2 overflow-hidden mb-6">
+          <!-- Will be populated with Stories when page is loaded -->
         </header>
-      <!-- Posts will go here -->
+      <!-- Will be populated with Posts when page is loaded -->
     </main>
 </body>
 
