--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
           <div class="link-item">
             <a href="./tutorials/tutorial06/index.html">Tutorial 6</a>
           </div>
+          <div class="link-item">
+            <a href="./tutorials/tutorial08/dist/index.html">Tutorial 8</a>
+          </div>
         </div>
       </div>
 
