--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             <a href="https://justbean.co/">Bean</a>
             <p>Declared interesting by Adam Parkzer</p>
           </div>
+          <div class="link-item">
+            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQO0PZtQog8bSl_lAcI5cAWC2rK4_4kAcQXWWFMm5aT16PXSA8GmCqcyJElZQnhEbxPop32ifTGPC-W/pubhtml">Drink mix tier list</a>
+          </div>
         </div>
       </div>
 
