Linked to the quiz

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
             <a href="./quizes/quiz01/index.html">Quiz 1</a>
           </div>
           <div class="link-item">
-            <a href="./quizes/quiz02a/index.html">Quiz 2</a>
+            <a href="./quizes/quiz02a/index.html">Quiz 2a</a>
+          </div>
+          <div class="link-item">
+            <a href="./quizes/quiz02b/index.html">Quiz 2b</a>
           </div>
         </div>
       </div>
