--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCI-344 Homepage</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image" href="./favicon.png">
+    <link rel="icon" type="image" href="./favicon.png" />
     <script>
       function filterLinks() {
         const searchTerm = document
@@ -35,7 +35,9 @@
   <body>
     <div class="container">
       <h1>CSCI 344 Homepage</h1>
-      <a href="https://github.com/TerminalCalamitas/csci344-coursework" class="base-repo"
+      <a
+        href="https://github.com/TerminalCalamitas/csci344-coursework"
+        class="base-repo"
         >Link to Base Repo</a
       >
       <input
@@ -59,6 +61,10 @@
           <div class="link-item">
             <a href="./homework/hw03/index.html">Homework 3</a>
             <p>I worked on this with Kati.</p>
+          </div>
+
+          <div class="link-item">
+            <a href="./homework/hw04/dist/index.html">Homework 4</a>
           </div>
         </div>
       </div>
@@ -116,11 +122,13 @@
             <p>Declared interesting by Adam Parkzer</p>
           </div>
           <div class="link-item">
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQO0PZtQog8bSl_lAcI5cAWC2rK4_4kAcQXWWFMm5aT16PXSA8GmCqcyJElZQnhEbxPop32ifTGPC-W/pubhtml">Drink mix tier list</a>
+            <a
+              href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQO0PZtQog8bSl_lAcI5cAWC2rK4_4kAcQXWWFMm5aT16PXSA8GmCqcyJElZQnhEbxPop32ifTGPC-W/pubhtml"
+              >Drink mix tier list</a
+            >
           </div>
         </div>
       </div>
-
     </div>
   </body>
 </html>
