Added essential graphic and related information to homepage

--- a/index.html
+++ b/index.html
@@ -117,18 +117,29 @@
           <div class="link-item">
             <a href="./fun/calebs-commentaries.html">Topic discussions</a>
           </div>
+
           <div class="link-item">
             <a href="https://justbean.co/">Bean</a>
             <p>Declared interesting by Adam Parkzer</p>
           </div>
+
           <div class="link-item">
             <a
               href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQO0PZtQog8bSl_lAcI5cAWC2rK4_4kAcQXWWFMm5aT16PXSA8GmCqcyJElZQnhEbxPop32ifTGPC-W/pubhtml"
               >Drink mix tier list</a
             >
           </div>
+
+          <div class="link-item">
+            <a href="https://kevinwarwick.org.uk/">Kevin Watch</a>
+          </div>
         </div>
       </div>
+      <img
+        src="https://kevinwarwick.org.uk/fk-banner.gif"
+        alt="FEAR THE MAN"
+        width="100%"
+      />
     </div>
   </body>
 </html>
