--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
           <div class="link-item">
             <a href="./tutorials/tutorial08/dist/index.html">Tutorial 8</a>
           </div>
+          <div class="link-item">
+            <a
+              href="https://github.com/TerminalCalamitas/csci344-coursework/tree/main/tutorials/tutorial09"
+              >Tutorial 9</a
+            >
+          </div>
         </div>
       </div>
 
